[package]
name = "server_client_utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.11.0", features = ["transport"] }
tonic-reflection = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9.3.0"
maxminddb = "0.24.0"
public-ip-addr = "0.1.0"

[build-dependencies]
tonic-build = "0.11.0"